--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,20 @@ before_install:
 - cp /usr/lib/python2.7/dist-packages/fontforge.* "$HOME/virtualenv/python2.7.8/lib/python2.7/site-packages"
 install:
 - pip install git+https://github.com/behdad/fontTools.git
+- pip install git+https://github.com/googlefonts/fontcrunch.git
 - pip install git+https://github.com/googlefonts/fontbakery-cli.git
 - pip install jinja2
-script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery.py .
+before_script:
+- mkdir -p builds/build
+script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery.py . | tee builds/build/build.log
 branches:
   only:
   - master
 after_script:
-- rm -rf builds/build/sources builds/build/build.state.yaml
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH bakery-report.py builds/build
+- rm -rf builds/build/sources
+- rm -rf builds/build/build.state.yaml
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH travis-deploy.py
 env:
   global:
-    secure: JVTNVYFOC3tYmiei4nqMiNeI5uBVs+9D+Ap8inlv0KTuU9j76K9XE81dnx74Mvj7UicGC7kYy8HUV9Wdb5pvpEb/bQZiFWUeDPW+Q8Kw4B33K1KVYRQetKBeQQwvMBpGUUhhct3j6X9Flw/5luwdZih1Fa+zQt5ES1dNhWCD2t4=
+    secure: flIP4ktb39k1oOXCpmPzLxUDM0koO6fZG4ouXBS/gnuCMFzCe5nfSqP/P91ExVgp+/+3IAFYniFKSD9q8IPZa3rVCq3pBAuB+1PV6m/uzDEOJWDROnN+FAm+5n827v9RxOCDRAv0jvCH0Xm8uFPGtaibvnxR1ZWi/liKbo0dmkc=
